--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,68 +21,67 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="25dp" />
+            android:layout_height="15dp" />
 
 
         <TextView
             android:id="@+id/labelSKU"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SKU" />
+            android:gravity="center"
+            android:text="SKU"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textSKU"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:textSize="20sp" />
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="15dp" />
+            android:layout_height="10dp" />
 
 
         <TextView
             android:id="@+id/labelIMEI"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="IMEI" />
+            android:gravity="center"
+            android:text="IMEI"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textIMEI"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:textSize="20sp" />
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="15dp" />
+            android:layout_height="10dp" />
 
         <TextView
             android:id="@+id/labelIMEITWO"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="IMEI 2" />
+            android:gravity="center"
+            android:text="IMEI 2"
+            android:textStyle="bold" />
 
 
         <TextView
             android:id="@+id/textIMEITWO"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:textSize="20sp" />
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="15dp" />
-
-
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="13dp" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="15dp" />
+            android:layout_height="5dp" />
 
         <ProgressBar
             android:id="@+id/progress"
@@ -92,7 +91,7 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="15dp" />
+            android:layout_height="5dp" />
 
         <TextView
             android:id="@+id/textRESULT"
